--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vuetify": "^3.4.2"
   },
   "dependencies": {
-    "@mdi/font": "^7.3.67"
+    "@mdi/font": "^7.3.67",
+    "vuetify-sonner": "^0.3.2",
+    "zod": "^3.22.4"
   }
 }
